--- a/invitacion.html
+++ b/invitacion.html
@@ -307,9 +307,9 @@
   width: 60%;      /* prueba 80%, 70%, 60% */
   max-width: 300px; /* tamaño máximo */
   margin: 0 auto;  /* centrar */
-  /*border-radius: 16px;*/
+  /border-radius: 16px;/
   overflow: hidden;
-  /*box-shadow: 0 12px 30px rgba(2,20,40,.08);*/
+  /box-shadow: 0 12px 30px rgba(2,20,40,.08);/
 }
 /* 🔄 Balanceo lateral */
 .swingElephant{
@@ -577,7 +577,7 @@
     </iframe>
   </div>
 
-  <a href="https://maps.app.goo.gl/yTGpP9FsA7zqymEf9"
+  <a href="https://maps.app.goo.gl/nX5EkKnwDk4KSYYq9"
      target="_blank"
      class="btnMapa">
     Mapa de ubicación
@@ -587,7 +587,7 @@
 
               <div class="confirmacionBox boxElefante tiktokCard">
 
-  <div class="iconoCarta">✉️</div>
+  <div class="iconoCarta">✉</div>
 
   <h3 class="tituloConfirmacion">Confirmación</h3>
 
