--- a/invitacion.html
+++ b/invitacion.html
@@ -12,51 +12,37 @@
 html,body{ height:100%; }
 
   body{
-    margin:0;
-    font-family:'Poppins',system-ui,sans-serif;
-    background:#eaf4fb;
-    min-height:100vh;
-    overflow-y:auto;
-  }
+  margin:0;
+  font-family:'Poppins',system-ui,sans-serif;
+  background:#eaf4fb;
+  min-height:100vh;
+}
 
-  /* Centrado general */
-  .wrap{
-    display:flex;
-    justify-content:center;
-    padding:12px 10px;
-  }
+.wrap{
+  display:flex;
+  justify-content:center;
+  padding:12px 10px;
+}
 
-  /* Marco tipo teléfono */
-  .phone{
-    width:100%;
-    max-width:390px;
-    border-radius:26px;
-    overflow:hidden;
-    box-shadow:0 18px 60px rgba(2,20,40,.16);
-    background:#fff;
-  }
+.phone{
+  width:100%;
+  max-width:390px;
+  border-radius:26px;
+  overflow:hidden;
+  box-shadow:0 18px 60px rgba(2,20,40,.16);
+  background:#fff;
+}
 
-  /* Fondo */
-  .page{
-    background:url("img/fondo.png") center / cover no-repeat;
-    position:relative;
-  }
-  .page::before{
-    content:"";
-    position:absolute; inset:0;
-    background:rgba(255,255,255,.62);
-    z-index:0; pointer-events:none;
-  }
- .direccionBox{
-  position: relative;
-  padding: 28px 22px;
-  border-radius: 34px;
-  text-align: center;
-  max-width: 360px;
-  margin: 30px auto;
-  font-family: 'Patrick Hand', cursive;
-  color: #6B4A2B;
-
+.page{
+  background:url("img/fondo.png") center / cover no-repeat;
+  position:relative;
+}
+.page::before{
+  content:"";
+  position:absolute; inset:0;
+  background:rgba(255,255,255,.62);
+  z-index:0;
+}
 
 .content{
   position:relative;
