--- a/invitacion.html
+++ b/invitacion.html
@@ -384,9 +384,9 @@ html,body{ height:100%; }
   <h3 class="tituloUbicacion">📍 Recepción</h3>
   <p>Mz. G lote 19<br>Urb. Los Lirios<br>Lima, SMP</p>
   <div class="mapBox">
-    <iframe src="https://www.google.com/maps?q=Urb%20Los%20Lirios%20SMP&output=embed"></iframe>
+    <iframe src="https://maps.app.goo.gl/nX5EkKnwDk4KSYYq9"></iframe>
   </div>
-  <a class="btnMapa" href="https://maps.app.goo.gl/yTGpP9FsA7zqymEf9" target="_blank">
+  <a class="btnMapa" href="https://maps.app.goo.gl/nX5EkKnwDk4KSYYq9" target="_blank">
     Mapa de ubicación
   </a>
 </div>
