--- a/invitacion.html
+++ b/invitacion.html
@@ -237,6 +237,9 @@ html,body{ height:100%; }
   .cLab{ margin-top:6px; font-size:10px; font-weight:800; letter-spacing:1px; color: rgba(31,41,55,.70); text-transform:uppercase; }
   .countNote{ margin-top:8px; font-size:12px; color: rgba(31,41,55,.65); }
 
+
+
+
   
 /* ======================
    BOX TIKTOK
@@ -307,6 +310,26 @@ html,body{ height:100%; }
              0 10px 22px rgba(2,20,40,.15);
 }
 
+  /* Tarjetas utilitarias */
+  .card{
+    border-radius:18px; background: rgba(255,255,255,.70);
+    border:1px solid rgba(31,41,55,.10); box-shadow:0 14px 40px rgba(2,20,40,.10);
+    padding:14px; margin:12px 0;
+  }
+  .sectionTitle{ font-size:14px; font-weight:700; letter-spacing:.6px; color:#1f2937; text-transform:uppercase; margin:0 0 10px; }
+
+  .btnRow{ display:flex; gap:10px; margin-top:12px; }
+  .btn{
+    flex:1; padding:12px; border-radius:14px;
+    border:1px solid rgba(31,41,55,.10); background: rgba(255,255,255,.78);
+    cursor:pointer; font-weight:700; font-size:13px; color:#1f2937;
+    text-decoration:none; display:flex; align-items:center; justify-content:center; gap:8px;
+    box-shadow:0 12px 28px rgba(2,20,40,.10);
+  }
+  .btnPrimary{ background: rgba(165,210,245,.70); }
+  .btn:active{ transform:scale(.99); }
+
+  
 /* ======================
    CONFIRMACIÓN
 ====================== */
