--- a/invitacion.html
+++ b/invitacion.html
@@ -103,7 +103,7 @@ html,body{ height:100%; }
   transform:rotate(-3deg);
 }
 .parentsPhoto img{ width:200px; }
-.parentsLabel{ font-size:13px;color:rgba(31,41,55,.65); }
+.parentsLabel{ font-size:13px;color:rgba(31,41,55,.65); padding-bottom:8px;}
 .parentsNames{
   font-family:Georgia,serif;
   font-size:20px;
