--- a/invitacion.html
+++ b/invitacion.html
@@ -406,7 +406,7 @@ html,body{ height:100%; }
   <h3 class="tituloUbicacion">📍 Recepción</h3>
   <p>Mz. G lote 19<br>Urb. Los Lirios<br>Lima, SMP</p>
   <div class="mapBox">
-    <iframe src="https://www.google.com/maps/place/CASA+ALEGRIA/@-12.00225,-77.0934195,17z/data=!3m1!4b1!4m6!3m5!1s0x9105cf001f409cd3:0xb85be9330ee12223!8m2!3d-12.00225!4d-77.0934195!16s%2Fg%2F11x1qg4ny7?entry=ttu&g_ep=EgoyMDI1MTIwOS4wIKXMDSoASAFQAw%3D%3D"></iframe>
+    <iframe src="https://www.google.com/maps?q=Daniel%20Peña%20San%202764%20Cochabamba&output=embed"></iframe>
   </div>
   <a class="btnMapa" href="https://maps.app.goo.gl/nX5EkKnwDk4KSYYq9" target="_blank">
     Mapa de ubicación
