--- a/invitacion.html
+++ b/invitacion.html
@@ -406,7 +406,7 @@ html,body{ height:100%; }
   <h3 class="tituloUbicacion">📍 Recepción</h3>
   <p>Mz. G lote 19<br>Urb. Los Lirios<br>Lima, SMP</p>
   <div class="mapBox">
-    <iframe src="https://www.google.com/maps?q=Daniel%20Peña%20San%202764%20Cochabamba&output=embed"></iframe>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3902.59863883633!2d-77.0934195!3d-12.002249999999998!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9105cf001f409cd3%3A0xb85be9330ee12223!2sCASA%20ALEGRIA!5e0!3m2!1ses!2spe!4v1766382857222!5m2!1ses!2spe" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
   </div>
   <a class="btnMapa" href="https://maps.app.goo.gl/nX5EkKnwDk4KSYYq9" target="_blank">
     Mapa de ubicación
