--- a/invitacion.html
+++ b/invitacion.html
@@ -148,7 +148,7 @@ html,body{ height:100%; }
   font-size:13px;
   font-weight:800;
   letter-spacing:1.5px;
-  margin-bottom:6px
+  margin-top:6px
 }
 
 /* centro (24) */
