--- a/invitacion.html
+++ b/invitacion.html
@@ -416,8 +416,8 @@ html,body{ height:100%; }
   <div class="sparkles"></div>
   <div class="iconoCarta">✉️</div>
   <h3>Confirmación</h3>
-  <p>Nos encantaría saber que nos acompañas.<br>Confirma tu asistencia.</p>
-  <a class="btnConfirmar" href="https://wa.me/51923810888" target="_blank">
+  <p>Nos encantaría saber que nos acompañas.<br></p>
+  <a class="btnConfirmar" href="https://wa.me/51923810888?text=Confirmo%20mi%20asistencia%20al%20Baby%20Shower%20de%20Luis%20Arturo%20🤩🤩" target="_blank">
     Confirmar asistencia
   </a>
 </div>
