--- a/invitacion.html
+++ b/invitacion.html
@@ -337,12 +337,13 @@ html,body{ height:100%; }
 /* ======================
    MOBILE SCROLL
 ====================== */
-@media (max-width:900px){
-  body{ overflow:hidden; }
-  .wrap{ height:100vh;align-items:center; }
-  .phone{ height:calc(100vh - 24px); }
-  .page{ height:100%;overflow-y:auto; }
-}
+@media (max-width: 900px){
+    body{ overflow:hidden; }
+    .wrap{ height:100vh; align-items:center; }
+    .phone{ height:calc(100vh - 24px); }
+    .page{ height:100%; overflow-y:auto; -webkit-overflow-scrolling:touch; }
+  }
+
 </style>
 </head>
 
