--- a/invitacion.html
+++ b/invitacion.html
@@ -345,6 +345,19 @@ html,body{ height:100%; }
     .page{ height:100%; overflow-y:auto; -webkit-overflow-scrolling:touch; }
   }
 
+  @media (max-width: 900px){
+  .page{
+    transform: translateZ(0);
+    backface-visibility: hidden;
+    -webkit-transform: translateZ(0);
+  }
+
+  .page::before{
+    transform: translateZ(0);
+    -webkit-transform: translateZ(0);
+  }
+}
+
 </style>
 </head>
 
