--- a/invitacion.html
+++ b/invitacion.html
@@ -343,20 +343,17 @@ html,body{ height:100%; }
     .wrap{ height:100vh; align-items:center; }
     .phone{ height:calc(100vh - 24px); }
     .page{ height:100%; overflow-y:auto; -webkit-overflow-scrolling:touch; }
-  }
-
-  @media (max-width: 900px){
-  .page{
-    transform: translateZ(0);
-    backface-visibility: hidden;
-    -webkit-transform: translateZ(0);
-  }
-
   .page::before{
-    transform: translateZ(0);
-    -webkit-transform: translateZ(0);
-  }
+  content:"";
+  position:absolute;
+  top:-1px; left:-1px; right:-1px; bottom:-1px;  /* en vez de inset:0 */
+  background:rgba(255,255,255,.62);
+  z-index:0;
+  pointer-events:none;
 }
+  }
+
+  
 
 </style>
 </head>
