--- a/invitacion.html
+++ b/invitacion.html
@@ -38,10 +38,7 @@ html,body{ height:100%; }
   position:relative;
 }
 .page::before{
-  content:"";
-  position:absolute; inset:0;
-  background:rgba(255,255,255,.62);
-  z-index:0;
+  display:none
 }
 
 .content{
@@ -344,12 +341,7 @@ html,body{ height:100%; }
     .phone{ height:calc(100vh - 24px); }
     .page{ height:100%; overflow-y:auto; -webkit-overflow-scrolling:touch; }
   .page::before{
-  content:"";
-  position:absolute;
-  top:-1px; left:-1px; right:-1px; bottom:-1px;  /* en vez de inset:0 */
-  background:rgba(255,255,255,.62);
-  z-index:0;
-  pointer-events:none;
+  display:none
 }
   }
 
