--- a/invitacion.html
+++ b/invitacion.html
@@ -63,6 +63,10 @@ html,body{ height:100%; }
   display:flex;align-items:center;justify-content:center;
   cursor:pointer;
   box-shadow:0 10px 26px rgba(2,20,40,.10);
+  position: fixed;
+  top: 16px;
+  left: 16px;     /* o right:16px */
+  z-index: 9999;
 }
 .musicIcon{ width:26px;height:26px; }
 
