--- a/invitacion.html
+++ b/invitacion.html
@@ -66,7 +66,7 @@ html,body{ height:100%; }
   position: fixed;
   top: 16px;
   left: 50px;     /* o right:16px */
-  z-index: 9999;
+  left: auto;
 }
 .musicIcon{ width:26px;height:26px; }
 
