--- a/invitacion.html
+++ b/invitacion.html
@@ -26,6 +26,7 @@ html,body{ height:100%; }
 
 .phone{
   width:100%;
+  position: relative;
   max-width:500px;
   border-radius:26px;
   overflow:hidden;
@@ -63,7 +64,7 @@ html,body{ height:100%; }
   display:flex;align-items:center;justify-content:center;
   cursor:pointer;
   box-shadow:0 10px 26px rgba(2,20,40,.10);
-  position: fixed;
+  position: absolute;
   top: 16px;
   left: 50px;     /* o right:16px */
   left: auto;
