--- a/invitacion.html
+++ b/invitacion.html
@@ -53,6 +53,18 @@ html,body{ height:100%; }
   padding:18px 16px 28px;
 }
 
+  /* ✅ Mobile/Tablet: scroll dentro del “teléfono” */
+    @media (max-width: 900px){
+      body{ overflow:hidden; }
+      .wrap{ height:100vh; align-items:center; }
+      .phone{ height: calc(100vh - 24px); }
+      .page{
+        height:100%;
+        overflow-y:auto;
+        -webkit-overflow-scrolling:touch;
+      }
+    }
+
 /* ======================
    BOTÓN MÚSICA
 ====================== */
