--- a/invitacion.html
+++ b/invitacion.html
@@ -295,11 +295,14 @@ html,body{ height:100%; }
   position:absolute;
   inset:0;
   pointer-events:none;
-  opacity:.55;
+  opacity:.7;
+
   background:
-    radial-gradient(circle, rgba(255,255,255,.95) 1px, transparent 2px) 0 0/70px 70px,
-    radial-gradient(circle, rgba(255,255,255,.75) 1px, transparent 2px) 30px 20px/90px 90px;
+    radial-gradient(circle, rgba(255,255,255,.95) 1px, transparent 2px) 0 0/60px 60px,
+    radial-gradient(circle, rgba(255,255,255,.85) 1px, transparent 2px) 30px 20px/90px 90px,
+    radial-gradient(circle, rgba(255,255,255,.6) 2px, transparent 3px) 10px 40px/120px 120px;
 }
+
 
 .boxElefante > *{ position:relative; z-index:1; }
 
