--- a/invitacion.html
+++ b/invitacion.html
@@ -263,32 +263,34 @@ html,body{ height:100%; }
 ====================== */
 .boxElefante{
   position:relative;
-  padding:28px 22px;
-  border-radius:22px;
+  padding:18px 20px 22px;   /* ⬅️ menos alto */
+  border-radius:20px;
   max-width:340px;
-  margin:30px auto;
+  margin:24px auto;         /* ⬅️ menos aire arriba/abajo */
   text-align:center;
   color:#6B4A2B;
 
   /* 🌟 Fondo más transparente */
-  background:
-    radial-gradient(circle at 20% 15%, rgba(255,255,255,.85) 0%, transparent 45%),
-    radial-gradient(circle at 85% 85%, rgba(180,220,240,.35) 0%, transparent 55%),
+    background:
+    radial-gradient(circle at 20% 10%, rgba(255,255,255,.95) 0%, transparent 40%),
+    radial-gradient(circle at 80% 80%, rgba(180,220,245,.55) 0%, transparent 55%),
     linear-gradient(180deg,
-      rgba(255,255,255,.45),
-      rgba(200,230,245,.35)
+      rgba(255,255,255,.35),
+      rgba(190,225,245,.28)
     );
 
-  backdrop-filter: blur(10px);
-  -webkit-backdrop-filter: blur(10px);
+  backdrop-filter: blur(12px);
+  -webkit-backdrop-filter: blur(12px);
 
-  border:1px solid rgba(255,255,255,.65);
+  border:1px solid rgba(255,255,255,.55);
+
   box-shadow:
-    0 18px 40px rgba(2,20,40,.18),
-    inset 0 1px 0 rgba(255,255,255,.6);
+    0 18px 42px rgba(2,20,40,.20),
+    inset 0 1px 0 rgba(255,255,255,.75);
 
   overflow:hidden;
 }
+
 
   .boxElefante::after{
   content:"";
@@ -299,26 +301,47 @@ html,body{ height:100%; }
 
   background:
     linear-gradient(120deg,
-      rgba(255,255,255,.6),
+      rgba(255,255,255,.65),
       rgba(255,255,255,0) 30%,
-      rgba(255,255,255,.35) 60%,
+      rgba(255,255,255,.45) 60%,
       rgba(255,255,255,0)
     );
 
   opacity:.35;
+  animation: borderGlow 6s ease-in-out infinite;
 }
+
+@keyframes borderGlow{
+  0%,100% { opacity:.25; }
+  50%     { opacity:.45; }
+}
+
 
 
 .boxElefante .sparkles{
   position:absolute;
-  inset:0;
+  inset:-20%;
   pointer-events:none;
-  opacity:.7;
 
   background:
-    radial-gradient(circle, rgba(255,255,255,.95) 1px, transparent 2px) 0 0/60px 60px,
-    radial-gradient(circle, rgba(255,255,255,.85) 1px, transparent 2px) 30px 20px/90px 90px,
-    radial-gradient(circle, rgba(255,255,255,.6) 2px, transparent 3px) 10px 40px/120px 120px;
+    radial-gradient(circle, rgba(255,255,255,1) 1px, transparent 2px) 0 0/50px 50px,
+    radial-gradient(circle, rgba(255,255,255,.9) 1px, transparent 2px) 30px 20px/80px 80px,
+    radial-gradient(circle, rgba(255,255,255,.6) 2px, transparent 3px) 10px 60px/120px 120px;
+
+  opacity:.75;
+  animation: sparkleMove 14s linear infinite,
+             sparkleBlink 3.5s ease-in-out infinite;
+}
+
+@keyframes sparkleMove{
+  0%   { transform: translateY(0) translateX(0); }
+  50%  { transform: translateY(-30px) translateX(20px); }
+  100% { transform: translateY(0) translateX(0); }
+}
+
+@keyframes sparkleBlink{
+  0%,100% { opacity:.65; }
+  50%     { opacity:.95; }
 }
 
 
