--- a/invitacion.html
+++ b/invitacion.html
@@ -262,7 +262,7 @@ html,body{ height:100%; }
   display:block;
   width:34px;          /* tamaño del icono */
   height:auto;
-  margin:0 auto 8px;   /* centrado + espacio abajo */
+  margin:0 auto 4px;   /* centrado + espacio abajo */
   opacity:.9;
   filter: drop-shadow(0 8px 14px rgba(0,0,0,.18));
 }
@@ -365,6 +365,8 @@ html,body{ height:100%; }
   display:flex;
   justify-content:center;
   gap:6px;
+  margin:2px 0 6px;    /* ⬅️ compacto */
+  line-height:1.15;   /* ⬅️ clave */
 }
 .mapBox{
   width:100%;
