--- a/invitacion.html
+++ b/invitacion.html
@@ -389,7 +389,108 @@ html,body{ height:100%; }
   box-shadow:inset 0 -3px 0 rgba(0,0,0,.12),
              0 10px 22px rgba(2,20,40,.15);
 }
+/* ======================
+   CONFIRMACIÓN (SIN CAJA)
+====================== */
+.confirmSection{
+  margin: 24px auto 8px;
+  max-width: 360px;
+  padding: 8px 6px 18px; /* sin tarjeta */
+  text-align: center;
+}
 
+.confirmRow{
+  display: flex;
+  align-items: center;
+  gap: 14px;
+  justify-content: center;
+}
+
+.confirmImgWrap{
+  flex: 0 0 auto;
+  width: 120px;
+  height: 120px;
+  border-radius: 18px;
+  overflow: hidden;
+  /* sin caja, solo una “foto” limpia */
+  background: transparent;
+}
+
+.confirmImg{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block;
+}
+
+.confirmText{
+  text-align: left;
+  max-width: 200px;
+}
+
+.confirmTitle{
+  font-size: 20px;
+  font-weight: 900;
+  color: #6B4A2B;
+  margin: 0 0 6px;
+}
+
+.confirmDesc{
+  font-size: 13px;
+  line-height: 1.35;
+  color: rgba(31,41,55,.70);
+  margin: 0 0 12px;
+}
+
+.confirmBtn{
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  padding: 12px 16px;
+  border-radius: 16px;
+  text-decoration: none;
+  font-weight: 800;
+  font-size: 13px;
+
+  /* botón “soft” sin caja grande */
+  background: rgba(165,210,245,.55);
+  border: 1px solid rgba(31,41,55,.10);
+  color: #6B4A2B;
+  box-shadow: 0 12px 26px rgba(2,20,40,.10);
+}
+
+.confirmBtn:active{ transform: scale(.99); }
+
+.confirmThanks{
+  margin-top: 14px;
+  font-weight: 900;
+  color: #6B4A2B;
+  line-height: 1.1;
+}
+
+.confirmThanks span{
+  display: block;
+  margin-top: 4px;
+  font-weight: 700;
+  font-size: 12px;
+  color: rgba(31,41,55,.65);
+}
+
+/* Mobile: se apila (imagen arriba, texto abajo) */
+@media (max-width: 420px){
+  .confirmRow{
+    flex-direction: column;
+    text-align: center;
+  }
+  .confirmText{
+    text-align: center;
+    max-width: 320px;
+  }
+  .confirmImgWrap{ width: 140px; height: 140px; }
+}
+
+
+  
   /* Tarjetas utilitarias */
   .card{
     border-radius:18px; background: rgba(255,255,255,.70);
@@ -501,18 +602,31 @@ html,body{ height:100%; }
   
 </div>
 
-<!-- CONFIRMACIÓN -->
-<div class="boxElefante">
-  <div class="sparkles"></div>
-  <div class="iconoCarta">✉️</div>
-  <h3>Confirmación</h3>
-  <p>Nos encantaría saber que nos acompañas.<br></p>
-  <a class="btnConfirmar" href="https://wa.me/51923810888?text=Confirmo%20mi%20asistencia%20al%20Baby%20Shower%20de%20Luis%20Arturo%20🤩🤩" target="_blank">
-    Confirmar asistencia
-  </a>
-</div>
+<!-- CONFIRMACIÓN (nuevo diseño sin caja) -->
+<section class="confirmSection" id="confirmacion">
+  <div class="confirmRow">
+    <!-- Imagen temática -->
+    <div class="confirmImgWrap">
+      <img src="img/confirmacion.png" alt="Confirmación" class="confirmImg">
+    </div>
 
-</div>
+    <!-- Texto -->
+    <div class="confirmText">
+      <div class="confirmTitle">Confirmación</div>
+      <div class="confirmDesc">Nos encantaría saber que nos acompañas.</div>
+
+      <a class="confirmBtn" href="https://wa.me/51923810888?text=Confirmo%20mi%20asistencia%20al%20Baby%20Shower%20de%20Luis%20Arturo%20🤩🤩" target="_blank">
+        Confirma tu asistencia
+      </a>
+    </div>
+  </div>
+
+  <div class="confirmThanks">
+    Gracias<br>
+    <span>Por ser parte de este día especial</span>
+  </div>
+</section>
+
 
 <audio id="bgMusic" preload="auto" loop>
   <source src="img/musica.mp3" type="audio/mpeg">
