--- a/invitacion.html
+++ b/invitacion.html
@@ -196,6 +196,40 @@ html,body{ height:100%; }
   letter-spacing: 1.2px;
 }
 
+.dayName, .yearNumber{
+  position: relative;
+  font-weight: 800;
+}
+
+/* Línea izquierda (SÁBADO) */
+.dayName::before{
+  content:"";
+  position:absolute;
+  left:-42px;
+  top:50%;
+  width:32px;
+  height:3px;
+  background:#1f2937;
+  transform:translateY(-50%);
+  border-radius:2px;
+}
+
+/* Línea derecha (2026) */
+.yearNumber::after{
+  content:"";
+  position:absolute;
+  right:-42px;
+  top:50%;
+  width:32px;
+  height:3px;
+  background:#1f2937;
+  transform:translateY(-50%);
+  border-radius:2px;
+}
+
+  
+
+  
 /* ===== ANIMACIONES ===== */
 
 /* ENERO flotando */
@@ -205,9 +239,24 @@ html,body{ height:100%; }
 
 /* 24 “pop” al cargar */
 .popDay{
-  animation: popIn .7s cubic-bezier(.2,1.6,.35,1) 1;
-  transform-origin: center;
+  animation:
+    popIn .7s cubic-bezier(.2,1.6,.35,1) 1,
+    blinkDay 2.8s ease-in-out infinite;
+    transform-origin: center;
+    text-shadow: 0 4px 10px rgba(0,0,0,.15);
 }
+
+  @keyframes blinkDay{
+  0%,100%{
+    opacity:1;
+    transform: scale(1);
+  }
+  50%{
+    opacity:.6;
+    transform: scale(1.03);
+  }
+}
+
 
 /* keyframes */
 @keyframes floatY{
