--- a/invitacion.html
+++ b/invitacion.html
@@ -456,21 +456,20 @@ html,body{ height:100%; }
 }
 
 .confirmImgWrap{
-  flex: 0 0 auto;
-  width: 120px;
-  height: 120px;
-  border-radius: 18px;
-  overflow: hidden;
-  /* sin caja, solo una “foto” limpia */
-  background: transparent;
+  flex:0 0 auto;
+  width:120px;
+  height:auto;          /* ✅ ya no fijamos altura */
+  overflow:visible;     /* ✅ no recorta */
+  border-radius:0;      /* opcional */
 }
 
 .confirmImg{
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  display: block;
+  width:100%;
+  height:auto;
+  display:block;
+  object-fit: contain;  /* ✅ no recorta */
 }
+
 
 .confirmText{
   text-align: left;
@@ -524,7 +523,53 @@ html,body{ height:100%; }
   font-size: 12px;
   color: rgba(31,41,55,.65);
 }
+.confirmHeader{
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  gap:14px;
+  margin: 6px 0 10px;
+}
 
+.confirmElephant{
+  width:110px;     /* ajusta tamaño */
+  height:auto;
+  display:block;
+  object-fit:contain;
+  flex:0 0 auto;
+}
+
+.confirmHeadText{
+  text-align:left;
+  max-width:220px;
+}
+
+.confirmTitle{
+  font-size:20px;
+  font-weight:900;
+  color:#6B4A2B;
+  margin:0 0 6px;
+}
+
+.confirmDesc{
+  font-size:13px;
+  line-height:1.35;
+  color:rgba(31,41,55,.70);
+  margin:0;
+}
+
+/* En pantallas muy angostas, que se apile bonito */
+@media (max-width:380px){
+  .confirmHeader{
+    flex-direction:column;
+    text-align:center;
+  }
+  .confirmHeadText{ text-align:center; }
+  .confirmElephant{ width:130px; }
+}
+
+  
+  
 /* Mobile: se apila (imagen arriba, texto abajo) */
 @media (max-width: 420px){
   .confirmRow{
@@ -653,28 +698,25 @@ html,body{ height:100%; }
 
 <!-- CONFIRMACIÓN (nuevo diseño sin caja) -->
 <section class="confirmSection" id="confirmacion">
-  <div class="confirmRow">
-    <!-- Imagen temática -->
-    <div class="confirmImgWrap">
-      <img src="img/confirmacion.png" alt="Confirmación" class="confirmImg">
-    </div>
+  <div class="confirmHeader">
+    <img src="img/confirmacion.png" alt="Confirmación" class="confirmElephant">
 
-    <!-- Texto -->
-    <div class="confirmText">
+    <div class="confirmHeadText">
       <div class="confirmTitle">Confirmación</div>
       <div class="confirmDesc">Nos encantaría saber que nos acompañas.</div>
-
-      <a class="confirmBtn" href="https://wa.me/51923810888?text=Confirmo%20mi%20asistencia%20al%20Baby%20Shower%20de%20Luis%20Arturo%20🤩🤩" target="_blank">
-        Confirma tu asistencia
-      </a>
     </div>
   </div>
+
+  <a class="confirmBtn" href="https://wa.me/51923810888?text=Confirmo%20mi%20asistencia%20al%20Baby%20Shower%20de%20Luis%20Arturo%20🤩🤩" target="_blank">
+    Confirma tu asistencia
+  </a>
 
   <div class="confirmThanks">
     Gracias<br>
     <span>Por ser parte de este día especial</span>
   </div>
 </section>
+
 
 
 <audio id="bgMusic" preload="auto" loop>
