--- a/invitacion.html
+++ b/invitacion.html
@@ -196,36 +196,66 @@ html,body{ height:100%; }
   letter-spacing: 1.2px;
 }
 
-.dayName, .yearNumber{
-  position: relative;
-  font-weight: 800;
+.dayName,
+.yearNumber{
+  position:relative;
+  font-weight:800;
+  padding:8px 0;           /* espacio para las líneas */
+  line-height:1;
 }
 
-/* Línea izquierda (SÁBADO) */
+/* SÁBADO: línea arriba */
 .dayName::before{
   content:"";
   position:absolute;
-  left:-42px;
-  top:50%;
-  width:32px;
+  left:50%;
+  top:0;
+  width:54px;
   height:3px;
   background:#1f2937;
-  transform:translateY(-50%);
+  transform:translateX(-50%);
   border-radius:2px;
 }
 
-/* Línea derecha (2026) */
+/* SÁBADO: línea abajo */
+.dayName::after{
+  content:"";
+  position:absolute;
+  left:50%;
+  bottom:0;
+  width:54px;
+  height:3px;
+  background:#1f2937;
+  transform:translateX(-50%);
+  border-radius:2px;
+}
+
+/* 2026: línea arriba */
+.yearNumber::before{
+  content:"";
+  position:absolute;
+  left:50%;
+  top:0;
+  width:54px;
+  height:3px;
+  background:#1f2937;
+  transform:translateX(-50%);
+  border-radius:2px;
+}
+
+/* 2026: línea abajo */
 .yearNumber::after{
   content:"";
   position:absolute;
-  right:-42px;
-  top:50%;
-  width:32px;
+  left:50%;
+  bottom:0;
+  width:54px;
   height:3px;
   background:#1f2937;
-  transform:translateY(-50%);
+  transform:translateX(-50%);
   border-radius:2px;
 }
+
 
   
 
