--- a/invitacion.html
+++ b/invitacion.html
@@ -255,10 +255,6 @@ html,body{ height:100%; }
   transform:translateX(-50%);
   border-radius:2px;
 }
-
-
-  
-
   
 /* ===== ANIMACIONES ===== */
 
@@ -271,23 +267,16 @@ html,body{ height:100%; }
 .popDay{
   animation:
     popIn .7s cubic-bezier(.2,1.6,.35,1) 1,
-    blinkDay 2.8s ease-in-out infinite;
-    transform-origin: center;
-    text-shadow: 0 4px 10px rgba(0,0,0,.15);
+    blinkFull 1.4s steps(1,end) 10s;
+  transform-origin:center;
 }
 
-  @keyframes blinkDay{
-  0%,100%{
-    opacity:1;
-    transform: scale(1);
-  }
-  50%{
-    opacity:.6;
-    transform: scale(1.03);
-  }
+@keyframes blinkFull{
+  0%, 49%  { opacity:1; }
+  50%,100% { opacity:0; }
 }
 
-
+ 
 /* keyframes */
 @keyframes floatY{
   0%,100%{ transform: translateY(0); }
