--- a/invitacion.html
+++ b/invitacion.html
@@ -267,7 +267,7 @@ html,body{ height:100%; }
 .popDay{
   animation:
     popIn .7s cubic-bezier(.2,1.6,.35,1) 1,
-    blinkFull 1.4s steps(1,end) 10s;
+    blinkFull 1.4s steps(1,end) infinite;
   transform-origin:center;
 }
 
