--- a/invitacion.html
+++ b/invitacion.html
@@ -176,7 +176,7 @@ html,body{ height:100%; }
   font-size:56px;
   font-weight:900;
   line-height:1;
-  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 /* derecha */
