--- a/invitacion.html
+++ b/invitacion.html
@@ -762,7 +762,7 @@ html,body{ height:100%; }
 <section class="confirmBox">
     <div class="confirmContent">
         <div class="confirmHeader">
-      <img src="img/elefante.png" alt="Elefante" class="confirmElephant">
+      <img src="img/confirmación.png" alt="Elefante" class="confirmElephant">
 
       <div class="confirmText">
         <h3 class="confirmTitle">Confirmación</h3>
